fix(password-update): Ensure that load mask spinner is visible

--- a/packages/password-update/src/components/PasswordUpdateDialog/PasswordUpdateDialog.scss
+++ b/packages/password-update/src/components/PasswordUpdateDialog/PasswordUpdateDialog.scss
@@ -47,3 +47,8 @@
     }
   }
 }
+
+.PasswordUpdateDialog.load-mask {
+  position: relative;
+  min-height: 100px;
+}
